# afriqa-entity-aware-qa

./: .gitignore  Makefile  README.md  journal_remaining_experiments_colab.ipynb  matched_volume_ablation_colab.ipynb  missing_ablation_plan.md  paper_draft.md  pipeline_redesign_report.md  presentation_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_all_experiments.sh  run_compare_lora.sh  run_experiments_colab.ipynb  run_lora_experiments_colab.ipynb
configs/: baseline_byt5_1x.yaml  default.yaml  matchedqa_byt5.yaml  matchedqa_mt5.yaml
corrections/: checklist.md  comprehensive_analysis_report.md
outputs/analysis/: all_tables.json  delta_analysis.json  drive_import_manifest.json  drive_import_report.md  error_analysis.json  error_analysis_report.md  ner_evaluation.json  overall_comparison.csv  per_language_breakdown.csv
outputs/metrics/: baseline_byt5_test_v2_metrics.csv  baseline_byt5_test_v2_metrics.json  baseline_mt5_test_metrics.csv  baseline_mt5_test_metrics.json  matchedqa_byt5_test_metrics.csv  matchedqa_byt5_test_metrics.json  matchedqa_mt5_test_metrics.csv  matchedqa_mt5_test_metrics.json  multitask_byt5_lora_test_qa_only_metrics.csv  multitask_byt5_lora_test_qa_only_metrics.json  multitask_byt5_test_qa_only_metrics.csv  multitask_byt5_test_qa_only_metrics.json  multitask_mt5_lora_test_qa_only_metrics.csv  (+5 more)
paper/manuscript/: appendix.md  (+5 more)
scripts/: 00_download_and_subset.py  01_prepare_qa_data.py  01b_prepare_multitask_data.py  02_train_baseline_qa.py  02b_eval_translation_pipeline.py  03_train_multitask_qa.py  04_eval_predictions.py  05_analyze_all_deltas.py  06_generate_figures.py  07_error_analysis.py  08_eval_ner.py  pull_drive_results.py
tests/: test_imports.py
(+70 files in other folders)
